--- a/index.html
+++ b/index.html
@@ -16,12 +16,48 @@
 
 
     </header>
-    <main class="main-content">
+    <div class="main-content">
         <div class="content">
            <a href="#"><img src="images/photo1.jpg"></a>
             <a href="#"><p>nickname</p></a>
         </div>
-    </main>
+        <div class="content">
+            <a href="#"><img src="images/photo1.jpg"></a>
+            <a href="#"><p>nickname</p></a>
+        </div>
+        <div class="content">
+            <a href="#"><img src="images/photo1.jpg"></a>
+            <a href="#"><p>nickname</p></a>
+        </div>
+    </div>
+    <div class="main-content">
+        <div class="content">
+            <a href="#"><img src="images/photo1.jpg"></a>
+            <a href="#"><p>nickname</p></a>
+        </div>
+        <div class="content">
+            <a href="#"><img src="images/photo1.jpg"></a>
+            <a href="#"><p>nickname</p></a>
+        </div>
+        <div class="content">
+            <a href="#"><img src="images/photo1.jpg"></a>
+            <a href="#"><p>nickname</p></a>
+        </div>
+    </div>
+    <div class="main-content">
+        <div class="content">
+            <a href="#"><img src="images/photo1.jpg"></a>
+            <a href="#"><p>nickname</p></a>
+        </div>
+        <div class="content">
+            <a href="#"><img src="images/photo1.jpg"></a>
+            <a href="#"><p>nickname</p></a>
+        </div>
+        <div class="content">
+            <a href="#"><img src="images/photo1.jpg"></a>
+            <a href="#"><p>nickname</p></a>
+        </div>
+    </div>
     <footer>
 
     </footer>
