правка стилей и создание формы

--- a/index.html
+++ b/index.html
@@ -7,14 +7,11 @@
 </head>
 <body>
     <header>
-
             <a href="/" class="logo"><img src="images/logo2.png"></a>
         <div class="buttonHead">
-            <a href="includes/reg.php">Регистрация</a>
-            <a href="includes/auth.php">Авторизация</a>
+            <a href="includes/form.html">Регистрация</a>
+            <a href="includes/form.html">Авторизация</a>
         </div>
-
-
     </header>
     <div class="main-content">
         <div class="content">
